objects/vlocity_cmt__ProductAvailability__c.object
<CustomObject>
    <description>Individual products and services may not be available in all geographical areas. For example, selected channels may not be authorized to broadcast within a given state or locale. Or a given telecommunications product may simply not yet be available in a given region. To accommodate such exclusions, &quot;rules&quot; regarding product availability can be defined. If a product is denoted as unavailable within a select state or zip code range, that product will not be suggested when creating a new order, opportunity, or quote, where the shipping address is in that state or zip code range.</description>
    <fields>
        <fullName>vlocity_cmt__City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__FromPostalCode__c</fullName>
        <description>Start of range of zipcodes where service not available</description>
        <label>From Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Product2Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Products Not Available</relationshipLabel>
        <relationshipName>ProductEligibility</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RuleBasis__c</fullName>
        <description>Level of rule, ex: Account, City, Postal Code, etc</description>
        <label>Rule Basis</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Postal Code</fullName>
                </value>
                <value>
                    <fullName>City</fullName>
                </value>
                <value>
                    <fullName>State</fullName>
                </value>
                <value>
                    <fullName>Country</fullName>
                </value>
                <value>
                    <fullName>Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ToPostalCode__c</fullName>
        <description>End of range of zipcodes where service not available</description>
        <label>To Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Product Not Available</label>
    <nameField>
        <label>Product Not Available Rule</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Products Not Available</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>